--- a/.browserslistrc
+++ b/.browserslistrc
@@ -8,6 +8,6 @@
 last 1 Chrome version
 last 1 Firefox version
 last 2 Edge major versions
-last 2 Safari major versions
+# last 2 Safari major versions - breaks build with error invalid version 15.2-15.3
 last 2 iOS major versions
 Firefox ESR
